--- a/app/src/main/res/layout/item_sale.xml
+++ b/app/src/main/res/layout/item_sale.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_main_container"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_padding"
-    android:paddingTop="@dimen/activity_vertical_margin"
->
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="3dp"
+    card_view:cardElevation="3dp"
+    card_view:cardUseCompatPadding="true">
 
-    <!-- TODO add ripple later android:foreground="?android:attr/selectableItemBackground" -->
-    <ImageView
-        android:id="@+id/item_sale_image"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_list_icon_height"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/item_sale_title"
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/item_main_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:textSize="14sp"
-        android:gravity="right"
-        android:paddingRight="@dimen/activity_padding"
-        android:paddingLeft="@dimen/activity_padding"
-        app:layout_constraintTop_toBottomOf="@id/item_sale_image" />
-</android.support.constraint.ConstraintLayout>
+        android:orientation="vertical"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:padding="@dimen/activity_padding"
+    >
+
+        <ImageView
+            android:id="@+id/item_sale_image"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_list_icon_height"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/content_description_sale_item"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/item_sale_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@id/item_sale_image" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
