--- a/app/src/main/res/layout/activity_saleitem.xml
+++ b/app/src/main/res/layout/activity_saleitem.xml
@@ -4,16 +4,17 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/item_sale_detail_image"
             android:layout_width="0dp"
             android:layout_height="@dimen/activity_item_icon_height"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/content_description_sale_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
